--- a/package.json
+++ b/package.json
@@ -2,10 +2,12 @@
   "name": "server",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "api/index.js",
+  "type":"module",
+
   "scripts": {
-    "start": "node index.js",
-    "dev": "nodemon index.js",
+    "start": "node .",
+    "dev": "nodemon api/index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
